--- a/TrabajoPHP/styles.css
+++ b/TrabajoPHP/styles.css
@@ -25,4 +25,27 @@ img{
     width: 200px;
     height: 200px;
     border-radius: 2rem;
+    align-items: center;
+}
+button{
+    border: none;
+    color: white;
+    padding: 5px 55px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+.button1 {
+    background-color: white; 
+    color: black; 
+    border: 2px solid #5a685a;
+}
+  
+  .button1:hover {
+    background-color: #887541;
+    color: white;
 }
