--- a/TrabajoPHP/styles.css
+++ b/TrabajoPHP/styles.css
@@ -27,6 +27,11 @@ img{
     border-radius: 2rem;
     align-items: center;
 }
+
+.respuesta{
+    text-align: center;
+    margin-top: 2em;
+}
 /* button{
     border: none;
     color: white;
