--- a/TrabajoPHP/styles.css
+++ b/TrabajoPHP/styles.css
@@ -33,7 +33,7 @@ img{
     margin-top: 2em;
     font-weight: bold;
 }
-/* button{
+.button{
     border: none;
     color: white;
     padding: 5px 55px;
@@ -54,4 +54,4 @@ img{
   .button1:hover {
     background-color: #887541;
     color: white;
-} */
+}
