--- a/TrabajoPHP/styles.css
+++ b/TrabajoPHP/styles.css
@@ -1,5 +1,5 @@
 h1{
-    margin-top: 1.5em;
+    /* margin-top: 1em; */
     color:black;
     text-align: center;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -27,6 +27,10 @@ img{
     border-radius: 2rem;
     align-items: center;
 }
+.rm{
+    text-align: center;
+    /* align-items: center; */
+}
 
 .respuesta{
     text-align: center;
@@ -51,7 +55,7 @@ img{
     border: 2px solid #5a685a;
 }
   
-  .button1:hover {
+.button1:hover {
     background-color: #887541;
     color: white;
 }
