--- a/TrabajoPHP/styles.css
+++ b/TrabajoPHP/styles.css
@@ -1,5 +1,4 @@
 h1{
-    /* margin-top: 1em; */
     color:black;
     text-align: center;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -29,14 +28,17 @@ img{
 }
 .rm{
     text-align: center;
+    font-weight: bold;
     /* align-items: center; */
 }
 
 .respuesta{
     text-align: center;
-    margin-top: 2em;
+    
     font-weight: bold;
+    font-size: 1.5em;
 }
+
 .button{
     border: none;
     color: white;
